<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/fragmentSearch"
        android:icon="@drawable/ic_search_foreground"
        android:title="@string/menu_search" />

<!--    <item-->
<!--        android:id="@id/fragmentCheckOut"-->
<!--        android:icon="@drawable/ic_check_out_foreground"-->
<!--        android:title="@string/menu_check_out" />-->

    <item
        android:id="@id/fragmentCheckIn"
        android:icon="@drawable/ic_check_in_foreground"
        android:title="@string/menu_check_in" />

    <item
        android:id="@id/fragmentReports"
        android:icon="@drawable/ic_menu_portfolio"
        android:title="@string/menu_reports" />

    <item
        android:id="@+id/fragmentStores"
        android:icon="@drawable/ic_stores"
        android:title="@string/menu_stores"
        />

</menu>
