<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CheckOut">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/checkout_art_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_number_black"
                android:drawablePadding="8dp"
                android:hint="@string/art_number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/checkout_color"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_color_black"
                android:drawablePadding="8dp"
                android:hint="@string/color" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout7"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout7"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/checkout_description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_description_black"
                android:drawablePadding="8dp"
                android:hint="@string/description" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout8"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout8"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout8">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/checkout_store"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_store_black"
                android:drawablePadding="8dp"
                android:hint="@string/store" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout9"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout9"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout9">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/checkout_quantity"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_quantity_black"
                android:drawablePadding="8dp"
                android:hint="@string/quantity" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout10"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout10"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout10">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/checkout_collector"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_person_black"
                android:drawablePadding="8dp"
                android:hint="@string/collector" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/checkout_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background"
            android:text="@string/menu_check_out"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout11"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout11" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
