<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.FragmentCheckOut">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/header"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/edit_header_check_out"
            android:textSize="18sp"
            android:textColor="@color/primaryText"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/checkout_art_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_number_black"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:editable="false"
                android:hint="@string/art_number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout7"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/checkout_color"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:focusable="false"
                android:editable="false"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_color_black"
                android:drawablePadding="8dp"
                android:hint="@string/color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout8"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout7"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout7"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/checkout_description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:focusable="false"
                android:editable="false"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_description_black"
                android:drawablePadding="8dp"
                android:hint="@string/description" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout9"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout8"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout8"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/checkout_store"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:editable="false"
                android:focusable="false"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_store_black"
                android:drawablePadding="8dp"
                android:hint="@string/store" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout10"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout9"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout9"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout9">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/checkout_quantity"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_quantity_black"
                android:drawablePadding="8dp"
                android:hint="@string/quantity" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout11"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout10"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout10"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout10">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/checkout_collector"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_person_black"
                android:drawablePadding="8dp"
                android:hint="@string/collector" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/checkout_button_edit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/button_background"
            android:text="@string/edit_check_out"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout11"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout11" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
